# macro_simulator

./: CLAUDE.md  README.md  RUN_TESTS.md  SPRINT1_DATA_SUMMARY.md  SPRINT1_S28_S29_CHECKLIST.md  SPRINT1_SUMMARY.md  SPRINT1_VISUALIZATION_SUMMARY.md  pyproject.toml  run.sh  test_imports.py  test_visualization_demo.py  train_universal.py  verify_implementation.py  verify_sprint1_data.py
.claude/: settings.local.json
.claude/agents/: data-engineer.md  eval-diagnostics.md  model-engineer.md  qa-reviewer.md  simulator-engineer.md
.github/workflows/: ci.yml  nightly.yml
configs/: ABLATION_README.md  README.md  REGIME_REFERENCE.md  ablation_no_eps.yaml  ablation_no_theta.yaml  ablation_no_world_id.yaml  lowo_exclude_lss.yaml  lowo_exclude_nk.yaml  lowo_exclude_rbc.yaml  lowo_exclude_switching.yaml  lowo_exclude_var.yaml  lowo_exclude_zlb.yaml  smoke_test_regime_A.yaml  universal_regime_A.yaml  universal_regime_B1.yaml  universal_regime_C.yaml
configs/examples/: baseline_mlp.yaml  universal_regime_A.yaml  universal_regime_B1.yaml  universal_regime_C.yaml
data/: IMPLEMENTATION_SUMMARY.md  LOWO_USAGE.md  QUICK_START.md  README.md  SPRINT1_TASKS_COMPLETE.md  VERIFICATION_CHECKLIST.md  __init__.py  manifest.py  splits.py  writer.py
data/schemas/: manifest.json
data/scripts/: generate_dataset.py  validate_dataset.py
data/tests/: test_data_pipeline.py  test_imports.py  test_splits.py
docs/: REPRODUCTION.md  SEEDS.md
emulator/: __init__.py
emulator/eval/: ABLATION_SUMMARY_README.md  QUICKSTART.md  README.md  __init__.py  ablation_summary.py  evaluate.py  figures.py  final_results.py  (+3 more)
examples/: ablation_summary_demo.py  demo_tokens_and_regimes.py  evaluate_model.py  lowo_example.py  test_universal_integration.py
notebooks/: lowo_training_colab.ipynb
simulators/: __init__.py  base.py  lss.py  nk.py  rbc.py  switching.py  var.py  zlb.py
spec/: spec.md  sprint-plan.md
(+33 files in other folders)
